parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr03.wacc
# type mismatch: int <- string

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int i = "foo"
end
